# cucoloris

./: .gitignore  LICENSE  README.md  pydoc-markdown.yml  setup.cfg
.github/workflows/: automated-build.yml  create-python-package.yml  documentation-generator.yml  python-package.yml
cucoloris/: __init__.py  _box.kv  _box.py  _colorarea.py  _colorlabel.kv  _colorlabel.py  _scrollarea.kv  _scrollarea.py  _scrollbar.kv  _scrollbar.py  _settings.py  background.kv  background.py  button.kv  button.py  formcontrol.kv  formcontrol.py  markupinput.kv  markupinput.py  plaininput.kv  plaininput.py
docs/: 404.html  index.html
docs/api-documentation/: index.html
docs/search/: search_index.json
