[metadata]
# replace with your username:
name = cucoloris
version = 0.0.3
url = https://github.com/woernerm/cucoloris
author = Marcus Wörner
author_email = 61889355+woernerm@users.noreply.github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Topic :: Software Development :: Widget Sets
description = Kivy widgets that look like Bootstrap.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find: